@@ -39,8 +39,8 @@ io.print(c);
 	xandx:= batcalc.and(x,A); io.print(x,xandx);
 	xorx:= batcalc.or(x,A); io.print(x,xorx);
 io.print("ifthen group");
-	xif0:= batcalc.ifthen(x,x);io.print(x,xif0);
-	xif1:= batcalc.ifthen(x,false);io.print(x,xif1);
+#	xif0:= batcalc.ifthen(x,x);io.print(x,xif0);
+#	xif1:= batcalc.ifthen(x,false);io.print(x,xif1);
 	xif2:= batcalc.ifthenelse(x,x,xn);io.print(x,x,xn,xif2);
 	xif3:= batcalc.ifthenelse(x,x,true);io.print(x,x,xif3);
 	xif4:= batcalc.ifthenelse(x,1,2);io.print(x,xif4);
