@@ -1,3 +1,6 @@
 # ChangeLog file for MonetDB5
 # This file is updated with Maddlog
 
+* Fri Dec 19 2014 Sjoerd Mullender <sjoerd@acm.org>
+- Removed function batcalc.ifthen.
+
